# rhdh-plugin-skill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.planning/: 00-onboard-plugin.md  01-pr-triage.md  02-publish-trigger.md  03-assignment-checker.md  04-codeowner-check.md  05-compat-bypass.md  06-slack-drafter.md  07-plugin-config.md  08-update-assist.md  README.md
commands/: fix-plugin-build.md  onboard-plugin.md  plugin-status.md  session-log.md  update-plugin.md
scripts/: rhdh-plugin
skills/overlay/workflows/: triage-prs.md
skills/rhdh/: SKILL.md
skills/rhdh-plugin/: SKILL.md
skills/rhdh-plugin/rhdh_plugin/: cli.py  config.py  formatters.py  todo.py  worklog.py
skills/rhdh-plugin/scripts/: rhdh-plugin
skills/rhdh-plugin/workflows/: doctor.md  onboard-plugin.md
skills/rhdh/references/: jira-reference.md
skills/rhdh/rhdh/: cli.py  config.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_claude_md.py  test_config.py  test_marketplace.py  test_skill_structure.py  test_todo.py  test_worklog.py
